# yukarin_soso_connector

./: .gitignore  Dockerfile  inference_hifigan.py  pyproject.toml  requirements.txt  run.py  run_cpp.py  run_jit.py  run_modify.py
.devcontainer/: devcontainer.json
build_each_cpp_forwarder/: CMakeLists.txt  each_cpp_forwarder.cpp  each_cpp_forwarder.h
build_each_cpp_forwarder/setup/: each_cpp_forwarder.pxd  each_cpp_forwarder.pyx  setup.py
yukarin_soso_connector/: acoustic_feature_extractor.py  cpp_forwarder.py  forwarder.py  utility.py
yukarin_soso_connector/jit_forwarder/: jit_forwarder.py  jit_yukarin_s.py  jit_yukarin_sa.py  jit_yukarin_sosoa.py
